--- a/html/index.html
+++ b/html/index.html
@@ -35,125 +35,8 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="col-sm-8 treatments" ng-class="[vm.user.margins, vm.user.fontSize]" ng-controller="MainController as vm">
-            <div class="panel panel-default">
+<main></main>
 
-                <treatment-toolbar></treatment-toolbar>
-
-                <title-settings-widget></title-settings-widget>
-
-                <advanced-search-widget search="vm.search"></advanced-search-widget>
-
-                <text-block-widget></text-block-widget>
-
-                <create-preset-widget></create-preset-widget>
-
-                <replace-preset-widget></replace-preset-widget>
-
-                <preset-settings-widget></preset-settings-widget>
-
-                <treatment treatment="treatment" editable="{{false && (!currentPage || currentPage<2) }}"
-                           index="{{$index}}"
-                           ng-class="{'editable': treatment.editable===true}"
-                           ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
-                            filter:vm.search.text |
-                            filter:{subject:vm.search.subject} |
-                            filter:{userToken:vm.search.user} |
-                            title:vm.search.title |
-                            invoiceCase:vm.search.case |
-                            compareDate:vm.search.dateFrom:'after' |
-                            compareDate:vm.search.dateTo:'before' |
-                            attachments:vm.search.attachments |
-                            orderBy:[(vm.reverse?'':'-')+'date', 'id']) |
-                            limitTo:vm.limit:(currentPage? vm.limit*(currentPage-1) : 0)  "
-                           treatmentlist="vm.treatments" user="::vm.user"></treatment>
-
-
-                <div class="row">
-
-                    <div class="col-xs-12 centered" ng-hide="vm.limit == vm.filteredTreatments.length || !vm.filteredTreatments"
-                         ng-cloak>
-                        <div class="panel">
-                            <div class="panel-body">
-                                <div class="btn-group">
-                                    <pagination total-items="vm.filteredTreatments.length" items-per-page="vm.limit"
-                                                ng-model="currentPage" ng-change="pageChanged()"></pagination>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-        <div class="col-sm-4 sidebar">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="panel panel-primary ">
-                        <div class="panel-heading">
-                            <h5>Medi-Liste</h5>
-                        </div>
-                        <div class="list-group">
-                            <a href class="list-group-item">Ein Medi</a>
-                            <a href class="list-group-item">Ein anderes Medi</a>
-                            <a href class="list-group-item">Ein drittes Medi</a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <h5>Biometrische Daten</h5>
-                        </div>
-                        <div class="list-group">
-                            <a href class="list-group-item">
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <p>Puls</p>
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <p>normal</p>
-                                    </div>
-                                </div>
-                            </a>
-                            <a href class="list-group-item">
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <p>Blutdruck</p>
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <p>zu tief</p>
-                                    </div>
-                                </div>
-                            </a>
-                            <a href class="list-group-item">
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <p>Cholesterin</p>
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <p>Homer Simpson!</p>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-    </div>
-
-</div>
 
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="../config/config.js"></script>
