Inserted Medilist first draft

--- a/dev/index.html
+++ b/dev/index.html
@@ -110,6 +110,7 @@
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
+<script type="text/javascript" src="../js/services/medication.service.js"></script>
 
 <script type="text/javascript" src="../js/preset/preset.service.js"></script>
 <script type="text/javascript" src="../js/preset/create-preset-widget.directive.js"></script>
