Inserted Medilist first draft

--- a/html/medication.html
+++ b/html/medication.html
@@ -29,7 +29,11 @@
     <![endif]-->
 </head>
 <body>
-<medication-widget></medication-widget>
+
+<div class="container">
+        <medication-widget></medication-widget>
+</div>
+
 
 
 <!-- Placed at the end of the document so the pages load faster -->
@@ -63,6 +67,7 @@
 
 <script type="text/javascript" src="../js/directives/medication-widget.directive.js"></script>
 <script type="text/javascript" src="../js/services/url.service.js"></script>
+<script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/medication.service.js"></script>
 <script type="text/javascript" src="../config/translate.config.js"></script>
 
