--- a/html/medication.html
+++ b/html/medication.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container pull-left" style="padding: 0px">
         <medication-widget></medication-widget>
 </div>
 
